2012-10-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	The openbsd compat library is no longer used.
	* pdftoepdf.cc, ptexlib.h, utils.c:
	Drop #include "openbsd-compat.h".
	* am/pdftex.am, am/pdftosrc.am: Remove OBSDCOMPAT_*.

2012-10-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid (most) MinGW compiler warnings from regex code.
	* regcomp.c, regexec.c: ANSI C function definitions.
	* regcomp.c (init_dfa): Declare codeset_name as const.
	* regex_internal.c (re_string_reconstruct, re_dfa_add_node):
	Avoid unused variables (for !RE_ENABLE_I18N).
	* regexec.c (regexec, re_search_stub, prune_impossible_nodes):
	Avoid unused variables (for !_LIBC or !RE_ENABLE_I18N).
	(re_search_2_stub): Avoid cast const => non-const.

2012-09-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.c [WIN32] (printID): Convert file names '\\' -> '/'.

2012-08-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ttf2afm.c: Drop '#include <libgen.h>', we use xbasename().
	* ptexmac.h: Avoid C++ style comment.

2012-08-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptexmac.h: Drop unused definition of M_PI & Co.

2012-08-08  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexlib.h: extern void writestreamlength(longinteger, longinteger);
	for largefile. 
	extern void storepacket(internalfontnumber, integer, strnumber); to
	avoid a compiler warning.
	* utils.c: void writestreamlength(longinteger length, longinteger offset)
	for largefile.
	* vfpacket.c: void storepacket(internalfontnumber f, integer c, strnumber s)
	to avoid a compiler warning.

2012-08-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftex.web: Update eTeX_revision and eTeX_version_string.

2012-08-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdftex.web: Adapt to e-TeX Version 2.5.
	* am/pdftex.am: Clarify *tex_version.h dependencies.

2012-07-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.c (initversionstring): Avoid using asprintf().

2012-07-19  Peter Breitenlohner  <peb@mppmu.mpg.de>
