@@ -1,3 +1,8 @@
+2012-10-18  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* pdftoepdf.cc: #include <w2c/config.h> early to avoid problems
+	with the definition of boolean in <rpcndr.h> for MINGW32.
+
 2012-10-09  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	The openbsd compat library is no longer used.
